# rTemboz

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ubuntu  Makefile  README.md  TODO  build.rs  import.sh  reset.sh
bugfeed/: Ablogtowatch  apnic  astral  atwood  diamond-geezer  dshr  dshr.dump  echo1  echo2  econlib  econlog  fanlesstech  fazal  gregg  guardian  hn  linkhut  lmnt  lobsters  nvd  run-in-title  sidequested  temboz  title-escaping  urls.txt  yk
migrations/: 001_initial.sql  002_auth.sql  003_aggregators.sql  004_vacuum.sql
src/: db.rs  feeds.rs  filter.rs  main.rs  utils.rs  webui.rs
src/db/: auth.rs  feed.rs  feeds.rs  fts5.rs  items.rs  rules.rs  setting.rs  udf.rs  views.rs  worker.rs
src/feeds/: normalize.rs  work.rs  worker.rs
src/webui/: add.rs  auth.rs  feed.rs  feeds.rs  login.rs  menu.rs  routes.rs  rules.rs  updown.rs  util.rs  view.rs  view_llm.rs
static/: specific.js  temboz.css  temboz.js
templates/: add.html  feed.html  feeds.html  login.html  menubar.html  rules.html  view.html
tests/: test.py
