[package]
name = "rtemboz"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = {version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"]}
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
actix-web = {version = "4", features = ["rustls-0_23"]}
askama = "0.14.0"
log = "0.4.29"
colog = "1.4.0"
ammonia = "4.1.2"
actix-web-static-files = {version = "4.1.1", features=["static-files-03"]}
assert_cmd = "2.1.2"
reqwest = { version = "0.13.2", features = ["cookies"] }
static-files = "0.3.1"
chrono = { version = "0.4.44", features = ["alloc"] }
serde = "1.0.228"
serde_json = "1.0.149"
itertools = "0.14.0"
anyhow = "1.0.102"
url = "2.5.8"
serde_urlencoded = "0.7.1"
futures = "0.3.32"
rayon = "1.11.0"
fastbloom = "0.16.0"
hyperscan-tokio-sys = "0.1.0"
hyperscan-tokio = "0.1.0"
regex = "1.12.3"
feedparser-rs = "0.4.5"
sha2 = "0.10.9"
sysinfo = "0.38.2"
rust-stemmers = "1.2.0"
unicode-normalization = "0.1"
clap = { version = "4.5.60", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting"] }
thiserror = "2.0.18"
futures-util = "0.3.32"
rust-argon2 = "3.0.0"
uuid = { version = "1.22.0", features = ["v4"] }

[build-dependencies]
static-files = "0.3.1"

[patch.crates-io]
hyperscan-tokio-sys = { path = "vendor/hyperscan-tokio-sys" }
