[package]
name = "rtemboz"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = {version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"]}
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
actix-web = {version = "4", features = ["rustls-0_23"]}
askama = "0.16.0"
log = "0.4.33"
colog = "1.4.0"
ammonia = "4.1.2"
actix-web-static-files = {version = "4.1.1", features=["static-files-03"]}
assert_cmd = "2.2.2"
reqwest = { version = "0.13.4", features = ["cookies"] }
static-files = "0.3.1"
chrono = { version = "0.4.45", features = ["alloc"] }
serde = "1.0.228"
serde_json = "1.0.150"
itertools = "0.15.0"
anyhow = "1.0.102"
url = "2.5.8"
serde_urlencoded = "0.7.1"
futures = "0.3.32"
rayon = "1.12.0"
fastbloom = "0.17.0"
hyperscan-tokio-sys = "0.1.0"
hyperscan-tokio = "0.1.0"
regex = "1.12.4"
feedparser-rs = "0.5.4"
sha2 = "0.11.0"
sysinfo = "0.39.5"
rust-stemmers = "1.2.0"
unicode-normalization = "0.1"
clap = { version = "4.6.1", features = ["derive"] }
time = { version = "0.3.51", features = ["formatting"] }
thiserror = "2.0.18"
futures-util = "0.3.32"
rust-argon2 = "3.0.0"
uuid = { version = "1.23.3", features = ["v4"] }
rand = "0.10.1"
rpassword = "7.5.4"
scraper = "0.27.0"
url-normalize = "0.1.1"
stop-words = "0.10.0"
diacritics = "0.2.2"
html-escape = "0.2.13"
libsqlite3-sys = "0.30.1"

[build-dependencies]
static-files = "0.3.1"
